--- a/daemon/daemon.conf
+++ b/daemon/daemon.conf
@@ -16,8 +16,6 @@
   "syslog_proto": "none",
   "syslog_server": "255.255.255.254:1234",
   "status_file": "./status.json",
-  "interface_name": "lo",
   "mdns_enabled": true,
-  "custom_node_id": "",
-  "ptp_status_script": "./scripts/ptp_status.sh"
+  "interface_name": "lo"
 }
