--- a/test/daemon.conf
+++ b/test/daemon.conf
@@ -4,23 +4,21 @@
   "http_base_dir": "./webui/dist",
   "log_severity": 3,
   "playout_delay": 0,
-  "tic_frame_size_at_1fs": 64,
+  "tic_frame_size_at_1fs": 48,
   "max_tic_frame_size": 1024,
   "sample_rate": 48000,
-  "rtp_mcast_base": "239.1.0.1",
+  "rtp_mcast_base": "239.69.0.1",
   "rtp_port": 5004,
   "ptp_domain": 0,
-  "ptp_dscp": 48,
-  "sap_mcast_addr": "224.2.127.254",
+  "ptp_dscp": 46,
+  "sap_mcast_addr": "239.255.255.255",
   "sap_interval": 30,
   "syslog_proto": "none",
   "syslog_server": "255.255.255.254:1234",
   "status_file": "./test/status.json",
-  "interface_name": "lo",
-  "mdns_enabled": false,
-  "mac_addr": "00:00:00:00:00:00",
-  "ip_addr": "127.0.0.1",
-  "node_id": "AES67 daemon 007f0100",
-  "custom_node_id": "",
-  "ptp_status_script": ""
+  "interface_name": "enp59s0",
+  "mdns_enabled": true,
+  "mac_addr": "8c:47:be:22:7d:24",
+  "ip_addr": "169.254.174.241",
+  "node_id": "AES67 daemon fea9f1ae"
 }
